--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -12,10 +12,14 @@ idna==3.3
 itsdangerous==2.0.1
 Jinja2==3.0.3
 MarkupSafe==2.0.1
+numpy==1.21.5
 orjson==3.6.5
+pandas==1.3.5
 pydantic==1.8.2
+python-dateutil==2.8.2
 python-dotenv==0.19.2
 python-multipart==0.0.5
+pytz==2021.3
 PyYAML==5.4.1
 requests==2.26.0
 six==1.16.0
