--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -8,4 +8,6 @@ RUN pip install --no-cache-dir --upgrade -r /src/requirements.txt
 
 COPY ./app /src/app
 
-CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "80"]
+COPY ./wsgi.py /src/wsgi.py
+
+CMD ["uvicorn", "wsgi:app", "--host", "0.0.0.0", "--port", "8000"]
