--- a/ui/package.json
+++ b/ui/package.json
@@ -12,6 +12,8 @@
     "@types/react-dom": "^17.0.11",
     "axios": "^0.24.0",
     "bootstrap": "^5.1.3",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.6",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-google-charts": "^3.0.15",
@@ -42,5 +44,13 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/enzyme": "^3.10.11",
+    "@types/enzyme-adapter-react-16": "^1.0.6",
+    "axios-mock-adapter": "^1.20.0",
+    "jest-watch-typeahead": "^0.6.5",
+    "jest-websocket-mock": "^2.2.1",
+    "mock-socket": "^9.0.8"
   }
 }
